fix: use correct SBOM format cyclonedx-json in attest workflow
Changed --format from 'cyclonedx' to 'cyclonedx-json' to match
the valid format options (cyclonedx-json, spdx-json, syft-json).

--- a/.github/workflows/attest-provenix.yml
+++ b/.github/workflows/attest-provenix.yml
@@ -96,7 +96,7 @@ jobs:
         run: |
           # Attest Provenix binary with itself
           ./provenix attest provenix \
-            --format cyclonedx \
+            --format cyclonedx-json \
             --output attestation.json \
             --skip-transparency
 
