fix: add security-events permission for CodeQL SARIF upload
Added security-events: write permission to allow Trivy results
to be uploaded to GitHub Security tab via CodeQL Action.

--- a/.github/workflows/attest-provenix.yml
+++ b/.github/workflows/attest-provenix.yml
@@ -12,6 +12,7 @@ permissions:
   id-token: write # OIDC token for keyless signing
   contents: write # Upload attestation to releases
   packages: write # Publish to GitHub Packages (future)
+  security-events: write # Upload Trivy SARIF results to GitHub Security
 
 jobs:
   build-and-test:
