--- a/.github/workflows/attest-provenix.yml
+++ b/.github/workflows/attest-provenix.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   build-and-test:
     name: Build and Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04 # Pinned for reproducible builds
 
     steps:
       - name: Checkout code
@@ -71,7 +71,7 @@ jobs:
 
   attest-self:
     name: Dog Fooding - Attest Provenix with Itself
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04 # Pinned for reproducible builds
     needs: build-and-test
     if: github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main')
 
@@ -195,7 +195,7 @@ jobs:
 
   security-scan:
     name: Security Scanning
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04 # Pinned for reproducible builds
     needs: build-and-test
 
     steps:
