ci: add Codecov token configuration to workflow
Add token authentication and fail_ci_if_error=false to prevent
blocking CI when Codecov is unavailable.

Requires CODECOV_TOKEN secret in repository settings.

--- a/.github/workflows/attest-provenix.yml
+++ b/.github/workflows/attest-provenix.yml
@@ -39,9 +39,11 @@ jobs:
         uses: codecov/codecov-action@v4
         if: always()
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.txt
           flags: unittests
           name: codecov-provenix
+          fail_ci_if_error: false
 
       - name: Build Provenix (Reproducible)
         run: |
