ci: make coverage upload mandatory for quality assurance
Changed fail_ci_if_error to true and removed if: always() condition.
CI will now fail if CODECOV_TOKEN is not configured or upload fails.

This enforces 80%+ coverage requirement from project guidelines.

--- a/.github/workflows/attest-provenix.yml
+++ b/.github/workflows/attest-provenix.yml
@@ -37,13 +37,12 @@ jobs:
 
       - name: Upload coverage
         uses: codecov/codecov-action@v4
-        if: always()
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.txt
           flags: unittests
           name: codecov-provenix
-          fail_ci_if_error: false
+          fail_ci_if_error: true
 
       - name: Build Provenix (Reproducible)
         run: |
